Make permalink fixed width for better alignment

--- a/src/assets/styles/changes.sass
+++ b/src/assets/styles/changes.sass
@@ -52,6 +52,8 @@
             font-weight: 700
             color: #585858
             margin-right: 8px
+            display: inline-block
+            min-width: 11em
         
         a.repo
             color: #585858
@@ -76,23 +78,7 @@ ul.changelog
 
     .content
         font-size: 14px
-        // max-height: 200px
-        // overflow: hidden
-        // text-overflow: ellipsis
-        // content: ""
-        // position: relative
-        
-
-
-        // &:before
-        //     content: ""
-        //     width: 100%
-        //     height: 100%
-        //     position: absolute
-        //     left: 0
-        //     top: 0
-        //     background: linear-gradient(transparent 150px, white)
-        //     pointer-events: none
+        padding-left: 23px
 
         ul
             padding-inline-start: 30px
